tests/baselines/reference/tsxUnionTypeComponent2.errors.txt
tests/cases/conformance/jsx/file.tsx(8,2): error TS2604: JSX element type 'X' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    
    import React = require('react');
    
    type Invalid1 = React.ComponentClass<any> | string;
    
    const X: Invalid1 = "Should fail to construct";
    
    <X />;
     ~
!!! error TS2604: JSX element type 'X' does not have any construct or call signatures.
    
    
    